--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -1,14 +1,53 @@
+*{
+  font-family: var(--main-font);
+  font-size: 65px;
+  color: var(--white);
+}
 .login {
-  background-color: red;
+
   position: absolute;
-  width: 1200px;
-  left: 1500px;
+  width: 1400px;
+  left: 900px;
   top: 1000px;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   font-size: 15px;
 }
 
+
+
+.input{
+  margin-top: -10px;
+  margin-bottom: 20px;
+}
 .button {
-  background-color: var(--blue);
+  margin-top: 30px;
+  width: 800px;
+  border:none;
+  
+}
+
+
+.helpContainer{
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.helpLinks{
+  margin-top: -5px;
+  font-size: 55px;
+}
+
+.errors{
+  font-size: 50px;
+  color: rgb(247, 243, 243);
+  text-decoration-line: underline;
+  
+}
+.errors::first-letter{
+  text-transform: capitalize;
 }
