--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -2,11 +2,13 @@
   font-family: var(--main-font);
   font-size: 15px;
   color: var(--white);
+  font-weight: 400;
 }
 .login {
+
   position: absolute;
-  width: 300px;
-  left: 300px;
+  width: 500px;
+  left: 240px;
   top: 250px;
   display: flex;
   flex-direction: column;
@@ -15,13 +17,30 @@
   font-size: 15px;
 }
 
+.label{
+  margin-top: 10px;
+}
+
 .input {
-  margin-top: -5px;
+  margin-top: 1px;
   margin-bottom: 5px;
+  height: 35px;
+  width: 320px;
+  border-radius: 3px;
+  border: none;
+}
+.input::placeholder {
+  padding-left: 10px;
 }
 .button {
+  margin-top: 5px;
   width: 180px;
   border: none;
+  height: 35px;
+  border-radius: 3px;
+  border: none;
+  color: black;
+  cursor: pointer;
 }
 
 .helpContainer {
@@ -33,14 +52,15 @@
 }
 .helpLinks {
   margin-top: -5px;
-  font-size: 15px;
+  font-size: 12px;
 }
 
 .errors {
- 
   font-size: 12px;
   color: rgb(247, 243, 243);
   text-decoration-line: underline;
+  margin-top: 10px;
+  margin-bottom: -10px;
 }
 .errors::first-letter {
   text-transform: capitalize;
