--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -1,7 +1,5 @@
-
-
-.navContainer{
-    /* height: 12vh;
+.navContainer {
+  /* height: 12vh;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -10,46 +8,63 @@
     background-color: var(--blue);
     border-bottom: 1px black solid; */
 
-    height: 12vh;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    background-color: var(--blue);
+  height: 10vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  background-color: var(--blue);
 }
 
-.containerLeft{
-    position: absolute;
-    align-items: center;
-    left: 23vw;
-    margin-left: 2rem;
+.containerLeft {
+  /* background-color: aqua; */
+  position: absolute;
+  display: flex;
+  align-items: center;
+  left: 16vw;
+  margin-left: 2rem;
+  width: 30vw;
+  height: 5vh;
+
+  padding-left: 1vh;
 }
 
-.logo{
-    width: 80%;
+.logo {
+  width: 16vw;
 }
 
-.user{
-    width: 4rem;
-    margin: 2rem;
+.user {
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 8vh;
+  width: 4vw;
+  margin-right: 1vw;
 }
 
-.links{
-    font-family: var(--main-font);
-    margin: 1rem;
-    font-size: 1.5rem;
-    text-decoration: none;
-    color: #fff;
+.userIcon {
+  font-size: 100px;
 }
 
-.links:hover{
-    font-size: 1.55rem;
-    text-shadow: 2px 2px 2px black;
+.links {
+  font-family: var(--main-font);
+  margin: 1vh;
+  font-size: 2vh;
+  text-decoration: none;
+  color: #fff;
+  transition: font-size 0.1s ease-in-out;
 }
 
-.containerSearchAndUser{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
+.links:hover {
+  font-size: 100.05%;
+  text-shadow: 2px 2px 2px black;
+}
+
+.containerSearchAndUser {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
