--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #000;
-  background-color:#3e3f41;
+  background-image:url('../src/assets/background-texture.png');
+  background-color: #3e3f41;
 }
 
 code {
