--- a/src/views/Profile/Profile.module.css
+++ b/src/views/Profile/Profile.module.css
@@ -1,21 +1,3 @@
-.profilePic {
-  width: 300px;
-  height: 300px;
-  object-fit: cover;
-  object-position: center center;
-  border-radius: 50%;
-  margin-left: auto;
-  margin-right: auto;
-}
-.formPic{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-left: 100px;
-}
-.tempPic{
-  
-}
 .container {
   display: flex;
   flex-direction: row;
@@ -27,15 +9,100 @@
   margin-left: 150px;
   margin-right: 150px;
   justify-content: space-between;
-  align-items: center;
   border-radius: 15px;
-  border: 1px solid rgb(65, 72, 51);
+  height: 550px;
+  /* align-items: center; */
+}
+
+.profilePic {
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
+  object-position: center center;
+  border-radius: 50%;
+  margin-top: 50px;
+  margin-left: 25px;
+  margin-right: auto;
+  align-items: flex-start;
+  border: 2px black;
+}
+
+.formPic {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: 100px;
+}
+
+.label {
+  margin-top: 20px;
+  margin-left: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #007fff;
+  font-size: 15px;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.label:hover {
+  color: blueviolet;
+}
+
+.cancel {
+  margin-top: 20px;
+  margin-left: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #007fff;
+  font-size: 15px;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.cancel:hover {
+  color: red;
+}
+
+.confirm {
+  margin-top: 20px;
+  margin-left: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #007fff;
+  font-size: 15px;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.confirm:hover {
+  color: #177245;
 }
 
 .text {
-  flex-grow: -1; /* Allow the info element to grow and occupy the remaining space */
-  text-align: center; /* Center the content horizontally */
-  margin-right:  auto;
+  flex-grow: 11;
+  text-align: center;
+  margin-right: auto;
   margin-left: auto;
+  margin-top: auto;
+  margin-bottom: auto;
   font-size: 20px;
+}
+
+.button {
+  color: rgb(255, 255, 255);
+  background-color: #007fff;
+  font-size: 16px;
+  line-height: 16px;
+  padding: 6px;
+  border-radius: 10px;
+  border: 2px solid #0064c8;
+  display: inline-block;
+}
+
+.button:hover {
+  background-color: #0064c8;
 }
